--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@azure/communication-call-automation": "^1.5.0",
+    "@azure/identity": "^4.11.1",
     "@elevenlabs/elevenlabs-js": "^2.9.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "axios": "^0.21.1",
+    "botbuilder": "4.23.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "elevenlabs-js": "^1.2.6",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
+    "isomorphic-fetch": "^3.0.0",
+    "mongoose": "^8.18.0",
     "multer": "^1.4.2",
-    "openai": "^5.12.2"
+    "openai": "^5.12.2",
+    "restify": "^11.1.0"
   },
   "author": "",
   "license": "ISC"
